# s-git

./: .gitignore  CMakeLists.txt  TODO.txt  build.md  s-git.cpp  s-git.h  s-git.sln  s-git.vcxproj  s-git.vcxproj.filters  test.md
.github/workflows/: ci.yml
.s-git/: HEAD
branch/: branch.cpp
cache/: file.cpp  file.h
checkout/: checkout.cpp
commit/: commit.cpp
init/: init.cpp
logCommand/: log.cpp
ls-tree/: ls-tree.cpp
merge/: merge.cpp
object/: object.cpp  object.h
status/: status.cpp
tag/: tag.cpp
test/: test.cpp  test.py
